<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2a2b2a"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".MainActivity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="top"
       android:orientation="horizontal"
       android:layout_marginTop="-4dp"
       >

       <Button
           android:layout_width="match_parent"
           android:layout_height="92dp"
           android:layout_marginBottom="20dp"
           android:layout_weight="2"
           android:enabled="false"
           android:text="@string/app_title"
           android:textAlignment="center"
           android:textColor="#F6F3F3"
           android:textSize="20sp"
           app:cornerRadius="0dp"
           tools:ignore="ButtonStyle,VisualLintButtonSize" />
       <Button
           android:layout_width="200dp"
           android:layout_height="92dp"
           android:layout_marginBottom="20dp"
           android:layout_weight="2"
           android:enabled="true"
           android:text="@string/app_exit"
           android:textAlignment="center"
           android:textColor="#F6F3F3"
           android:textSize="20sp"
           app:cornerRadius="0dp"
           android:onClick="actionBtn"
           tools:ignore="ButtonStyle" />

   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="-25dp"
        >
        <TextView
            android:id="@+id/tv_prevNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/txt_prevNum"
            android:textAlignment="textEnd"
            android:textColor="#c7c9c7"
            android:textSize="30sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-10dp"
        >
        <TextView
            android:id="@+id/tv_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/txt_operation"
            android:textAlignment="textEnd"
            android:textColor="#c7c9c7"
            android:textSize="30sp"
            android:layout_weight="10"
            />

        <TextView
            android:id="@+id/tv_currentNum"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="70sp"
            android:autoSizeMinTextSize="30sp"
            android:text="@string/txt_currentNum"
            android:textAlignment="textEnd"
            android:textColor="#c7c9c7"
            android:textSize="70sp"
            tools:targetApi="o" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/btn_ce"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:text="@string/txt_ce"
            android:textColor="#c3c7c3"
            android:textSize="45sp"
            app:cornerRadius="6dp"
            android:onClick="actionBtn"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
        <Button
            android:id="@+id/btn_c"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="2dp"
            android:textSize="45sp"
            android:text="@string/txt_c"
            android:textColor="#c3c7c3"
            app:cornerRadius="6dp"
            android:onClick="actionBtn"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
        <Button
            android:id="@+id/btn_divide"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:layout_weight="1.34"
            android:layout_margin="2dp"
            android:textSize="45sp"
            android:text="@string/txt_divide"
            android:textColor="#c3c7c3"
            app:cornerRadius="6dp"
            tools:ignore="ButtonStyle,VisualLintButtonSize"
            android:onClick="actionBtn"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="-8dp"
        android:layout_height="100dp"
        >

        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="45sp"
            android:text="@string/txt_9"
            android:textColor="#c3c7c3"
            app:cornerRadius="6dp"
            tools:ignore="ButtonStyle,VisualLintButtonSize"
            android:onClick="actionBtn"/>
        <Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="45sp"
            android:text="@string/txt_8"
            android:textColor="#c3c7c3"
            app:cornerRadius="6dp"
            tools:ignore="ButtonStyle,VisualLintButtonSize"
            android:onClick="actionBtn"/>
        <Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="45sp"
            android:text="@string/txt_7"
            android:textColor="#c3c7c3"
            app:cornerRadius="6dp"
            tools:ignore="ButtonStyle,VisualLintButtonSize"
            android:onClick="actionBtn"/>
        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="45sp"
            android:text="@string/txt_minus"
            android:textColor="#c3c7c3"
            app:cornerRadius="6dp"
            tools:ignore="ButtonStyle,VisualLintButtonSize"
            android:onClick="actionBtn"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="-8dp"
        android:layout_height="100dp"
        >

        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="45sp"
            android:text="@string/txt_6"
            android:textColor="#c3c7c3"
            app:cornerRadius="6dp"
            tools:ignore="ButtonStyle,VisualLintButtonSize"
            android:onClick="actionBtn"
            />
        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="45sp"
            android:text="@string/txt_5"
            android:textColor="#c3c7c3"
            app:cornerRadius="6dp"
            tools:ignore="ButtonStyle,VisualLintButtonSize"
            android:onClick="actionBtn"/>
        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="45sp"
            android:text="@string/txt_4"
            android:textColor="#c3c7c3"
            app:cornerRadius="6dp"
            tools:ignore="ButtonStyle,VisualLintButtonSize"
            android:onClick="actionBtn"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/txt_add"
            android:textColor="#c3c7c3"
            android:textSize="45sp"
            app:cornerRadius="6dp"
            android:onClick="actionBtn"
            tools:ignore="ButtonStyle,DuplicateSpeakableTextCheck,VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="-8dp"
        android:layout_height="100dp"
        >

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="45sp"
            android:text="@string/txt_3"
            android:textColor="#c3c7c3"
            app:cornerRadius="6dp"
            tools:ignore="ButtonStyle,VisualLintButtonSize"
            android:onClick="actionBtn"/>
        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="45sp"
            android:text="@string/txt_2"
            android:textColor="#c3c7c3"
            app:cornerRadius="6dp"
            tools:ignore="ButtonStyle,VisualLintButtonSize"
            android:onClick="actionBtn"/>
        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="45sp"
            android:text="@string/txt_1"
            android:textColor="#c3c7c3"
            app:cornerRadius="6dp"
            tools:ignore="ButtonStyle,VisualLintButtonSize"
            android:onClick="actionBtn"/>

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/txt_multiply"
            android:textColor="#c3c7c3"
            android:textSize="45sp"
            app:cornerRadius="6dp"
            tools:ignore="ButtonStyle,VisualLintButtonSize"
            android:onClick="actionBtn"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="-8dp"
        android:layout_height="100dp"
        >

        <Button
            android:id="@+id/btn_0"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textSize="45sp"
            android:text="@string/txt_0"
            android:textColor="#c3c7c3"
            app:cornerRadius="6dp"
            tools:ignore="ButtonStyle,VisualLintButtonSize"
            android:onClick="actionBtn"
            />
        <Button
            android:id="@+id/btn_dot"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:textSize="45sp"
            android:layout_weight="1"
            android:text="@string/txt_dot"
            android:textColor="#c3c7c3"
            app:cornerRadius="6dp"
            tools:ignore="ButtonStyle,VisualLintButtonSize"
            android:onClick="actionBtn"/>
        <Button
            android:id="@+id/btn_equals"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:textSize="45sp"
            android:layout_weight="1"
            android:text="@string/txt_equals"
            android:textColor="#c3c7c3"
            app:cornerRadius="6dp"
            tools:ignore="ButtonStyle,VisualLintButtonSize"
            android:onClick="actionBtn"/>

    </LinearLayout>

</LinearLayout>